fixed style for transition on subcategory-wrapper

--- a/src/components/Header/CategoriesContainer/CategoriesContainer.scss
+++ b/src/components/Header/CategoriesContainer/CategoriesContainer.scss
@@ -33,7 +33,6 @@
 .subcategories-container {
   display: flex;
   align-items: baseline;
-  height: 110px;
   position: relative;
   background-color: white;
 
@@ -47,7 +46,8 @@
   position: absolute;
   box-shadow: 0 7px 13px rgb(0 0 0 / 20%);
   overflow: hidden;
-  transition: height ease-in 2s;
+  transition: height ease-in 0.2s 0.2s;
+  height: 110px;
 }
 
 .category-wrapper {
