--- a/src/components/Header/CategoriesContainer/CategoriesContainer.scss
+++ b/src/components/Header/CategoriesContainer/CategoriesContainer.scss
@@ -5,7 +5,6 @@
   justify-content: space-between;
   flex-wrap: nowrap;
   cursor: pointer;
-  font-size: 14px;
   color: grey;
   overflow: hidden;
   min-width: 926px;
@@ -18,6 +17,7 @@
     padding: 22px 0;
     list-style: none;
     border-bottom: 3px solid white;
+    font-size: 1.4rem;
   }
 
   .category-item.hovered {
@@ -48,6 +48,7 @@
   transition: height ease-in 0.2s 0.2s;
   height: 110px;
   background-color: white;
+  z-index: 10;
 }
 
 .subcategories-wrapper.hidden {
