--- a/src/pages/CatalogPage/CatalogPage.scss
+++ b/src/pages/CatalogPage/CatalogPage.scss
@@ -4,12 +4,12 @@
   &>h1 {
     position: relative;
     z-index: 1;
-    margin: 0 0 0 17px;
+    margin-right: 16px;
     color: #2c509a;
     font-size: 32px;
     font-weight: 500;
     background: #fff;
-    padding: 0 10px 0 7px;
+    padding-left: 15px;
     display: inline-block;
   }
 }
@@ -36,9 +36,20 @@
 .filters-row {
   display: flex;
   align-items: center;
+  margin: 10px 0;
+  padding: 0 15px;
 
   &>hr {
     flex-grow: 1;
     margin: 0 6px;
   }
+}
+
+.catalogs-container {
+
+}
+
+.catalogs-container.flex-view {
+  display: flex;
+
 }
