--- a/src/components/ItemsCard/ItemsCard.scss
+++ b/src/components/ItemsCard/ItemsCard.scss
@@ -3,12 +3,17 @@
 .items-card-wrapper {
   border-bottom: solid 1px #efefef;
   position: relative;
-  padding: 15px;
 
-  &>svg {
+  &>.like-wrapper {
     position: absolute;
-    left: 0;
-    top: 1rem;
+    left: 1px;
+    top: 10px;
+    fill: #999;
+    cursor: pointer;
+  }
+
+  &>.like-wrapper:hover {
+    fill: $primary-orange;
   }
 
   .description {
@@ -18,6 +23,17 @@
       color: #999;
       margin-right: 10px;
     }
+  }
+}
+
+.flex-view {
+  .items-card-wrapper {
+    &>.like-wrapper {
+      left: -16px;
+      top: -10px;
+    }
+    border: solid 1px #efefef;
+    border-radius: 10px;
   }
 }
 
@@ -59,6 +75,16 @@
     }
   }
 }
+.like-wrapper:hover + .grid-card {
+  box-shadow: 0 0 13px 0 rgb(0 0 0 / 35%);
+}
+.like-wrapper:hover + .row-card {
+  background-color: #e5e5e5;
+}
+
+.like-wrapper.active + .items-card {
+  background: linear-gradient(#ffe0bb, #fffffe);
+}
 
 .items-card {
   
@@ -74,8 +100,23 @@
   &.grid-card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     padding: 30px 15px;
+    border-radius: 10px;
+    
+    &>img {
+      width: 230px;
+    }
+    &>a {
+      text-decoration: none;
+      font-size: 15px;
+    }
+    .items-price {
+      font-size: 18px;
+      padding: 0;
+      margin: 10px 0;
+      font-weight: 600;
+    }
   }
 
   &.grid-card:hover {
