--- a/src/pages/CatalogPage/CatalogPage.scss
+++ b/src/pages/CatalogPage/CatalogPage.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors.scss';
+
 .page-title {
     margin-top: 0.5rem;
 
@@ -14,11 +16,28 @@
   }
 }
 
+.btn-togle {
+  display: flex;
+}
+
+.btn-togle-to-row-table.active {
+  &>svg {
+    fill: $common-blue;
+  }
+}
+
+.btn-togle-to-row-table:not(.active):hover {
+  &>svg {
+      fill: gray;
+      cursor: pointer;
+    }
+}
+
 .btn-togle-to-row-table {
   border: none;
   padding: 0;
   background-color: transparent;
-  cursor: pointer;
+
   &>svg {
     fill: #D3D3D3;
   }
@@ -27,16 +46,10 @@
   }
 }
 
-.btn-togle-to-row-table:hover {
-  &>svg {
-    fill: gray;
-  }
-}
-
 .filters-row {
   display: flex;
   align-items: center;
-  margin: 10px 0;
+  margin: 20px 0;
   padding: 0 15px;
 
   &>hr {
@@ -45,16 +58,16 @@
   }
 }
 
-.catalogs-container {
-
-}
-
 .catalogs-container.flex-view {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 
   .items-card-wrapper {
-    width: 334px;
+    width: 250px;
+    height: 650px;
+
+    .items-card {
+      height: 650px;
+    }
   }
 }
